--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -148,3 +148,13 @@ ol {
   margin-inline-end: 0;
   padding-inline-start: 40px;
 }
+
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 40px;
+}
